<resources>
    <string name="app_name">HFM</string>
    <string name="text_add">Add</string>
    <string name="text_user_details">User Details</string>
    <string name="text_next">Next</string>
    <string name="text_user_list">User List</string>
    <string name="alert_text">Are you sure to logout?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="text_login">Login</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_password">Password</string>
    <string name="text_surrey_bike_email_or_phone">HFC email or phone</string>
    <string name="valid_please_enter_user_name">Please enter user name.</string>
    <string name="valid_please_enter_password">Please enter password.</string>
    <string name="valid_invalid_username">Invalid UserName.</string>
    <string name="valid_invalid_password">Invalid Password.</string>
    <string name="text_congratulations">Congratulations</string>
    <string name="text_your_account_has_been_created_to_activate_your_account_please_pay_5959_r_s">Your account has been created, To activate your account please pay 5959 R.S.</string>
    <string name="text_pay_now">Pay Now</string>
    <string name="text_under_development">Under Development</string>
    <string name="rb">RB</string>
    <string name="submit">SUBMIT</string>
    <string name="valid_internet_connection">Your internet connection has gone please connect to wifi.</string>
    <string name="text_login_don_t_have_link_i_have_referral_code">Don\'t have link? I have referral code</string>
    <string name="text_registration">Registration</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Test</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="unable_to_get_user">unable to get user list,please try again later!</string>
    <string name="bearer">bearer</string>
    <string name="no_internet">no iternet connection</string>
    <string name="text_add_user">Add User</string>
    <string name="Internet_failed">Internet Connection\'s Failed!!</string>
    <string name="response_failed">Something went wrong!!</string>
    <string name="invalid_email">Invalid Email!!</string>
    <string name="valid_phone">Enter 10 Digit Number!!</string>

    <string name="address">1,1 Sikshak Colony,Behror,Alwar,Rajyasthan,301701</string>
    <string name="terms">Privacy and Policy</string>


</resources>
